[package]
name = "execraft-runtime"
version = "1.0.0-b1"
edition = "2021"
rust-version = "1.74"
description = "Adaptive data-plane runtime for Execraft with HTTP API, CLI, capability negotiation, and local resource ledger"
license = "MIT"
repository = "https://github.com/iammm0/execraft-runtime"
homepage = "https://github.com/iammm0/execraft-runtime"
documentation = "https://docs.rs/execraft-runtime"
readme = "README.md"
keywords = ["execraft", "runtime", "scheduler", "sandbox", "orchestration"]
categories = ["command-line-utilities", "web-programming::http-server"]

[dependencies]
axum = { version = "0.7", features = ["http1", "json", "tokio"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
libc = "0.2"
nix = { version = "0.29", features = ["fs", "process", "resource", "sched", "signal", "user"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.10", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.12"
